--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
   <title>Country Specific Greenhouse Gas Emission Analysis</title>
 
-  <link rel="stylesheet" type="text/css" href="/website/style.css">
+  <link rel="stylesheet" type="text/css" href="website/style.css">
 
-  <script src="/p5/libraries/p5.min.js"></script>
-  <script src="/p5/libraries/p5.sound.min.js"></script>
+  <script src="p5/libraries/p5.min.js"></script>
+  <script src="p5/libraries/p5.sound.min.js"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,7 +24,7 @@
 
   <div class='format'>
     <script src='https://d3js.org/d3.v7.min.js'></script>
-    <script src='/website/main.js'></script>
+    <script src='website/main.js'></script>
 
     <h2 class="oxygen-bold">Carbon Atlas</h2>
     <h3 class="oxygen-light"><i>A Global Analysis of Country Specific Green House Gas Emissions</i></h3>
@@ -72,13 +72,13 @@
     <div class='center'>
       <div id="sketch-container"></div>
 
-      <script src="/p5/sketch.js"></script>
-      <script src="/p5/Country.js"></script>
-      <script src="/p5/EmissionCircle.js"></script>
+      <script src="p5/sketch.js"></script>
+      <script src="p5/Country.js"></script>
+      <script src="p5/EmissionCircle.js"></script>
     </div>
 
     <div class="center">
-      <img src="/website/mapKey-01.svg" alt="SVG Image" width="350" height="200">
+      <img src="website/mapKey-01.svg" alt="SVG Image" width="350" height="200">
     </div>
 
 
@@ -97,7 +97,7 @@
 
     <div>
       <div class='center'>
-        <iframe src='/website/chart.html' width='90%' height='900px' frameborder='0'></iframe>
+        <iframe src='website/chart.html' width='90%' height='900px' frameborder='0'></iframe>
       </div>
 
       <p>We first present an overview of total greenhouse gas emissions overtime (1970 - 2022) by country. The goal of
@@ -116,10 +116,10 @@
 
     <div>
       <div class='center'>
-        <iframe src='/website/chart_comp.html' width='80%' height='575px' frameborder='0'></iframe>
+        <iframe src='website/chart_comp.html' width='80%' height='575px' frameborder='0'></iframe>
       </div>
       <div class='center'>
-        <iframe src='/website/chart_comp2.html' width='80%' height='575px' frameborder='0'></iframe>
+        <iframe src='website/chart_comp2.html' width='80%' height='575px' frameborder='0'></iframe>
       </div>
 
 
@@ -147,7 +147,7 @@
 
     <div>
       <div class='center'>
-        <iframe src='/website/chart_scatter.html' width='65%' height='400px' frameborder='0'></iframe>
+        <iframe src='website/chart_scatter.html' width='65%' height='400px' frameborder='0'></iframe>
       </div>
       <div>
         <p>In order to see how a country's economy impacts it total emissions here we use a scatter plot to identify a
@@ -168,7 +168,7 @@
 
     <div>
       <div class='center'>
-        <iframe src='/website/chart_capita.html' width='80%' height='870px' frameborder='0'></iframe>
+        <iframe src='website/chart_capita.html' width='80%' height='870px' frameborder='0'></iframe>
       </div>
 
 
