--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oxygen:wght@300;400;700&display=swap"
     rel="stylesheet">
 
+    <base href="/emissions_viz_finalProject/">
+
 </head>
 
 <body>
