--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
     <div class='center'>
       <div id="sketch-container"></div>
 
-      <script src="p5/sketch.js"></script>
-      <script src="p5/Country.js"></script>
-      <script src="p5/EmissionCircle.js"></script>
+      <script src="website/sketch.js"></script>
+      <script src="website/Country.js"></script>
+      <script src="website/EmissionCircle.js"></script>
     </div>
 
     <div class="center">
