--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
   <link rel="stylesheet" type="text/css" href="website/style.css">
 
-  <script src="p5/libraries/p5.min.js"></script>
-  <script src="p5/libraries/p5.sound.min.js"></script>
+  <script src="website/libraries/p5.min.js"></script>
+  <script src="website/libraries/p5.sound.min.js"></script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
