--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
   <link rel="stylesheet" type="text/css" href="website/style.css">
 
+  <!--
   <script src="website/libraries/p5.min.js"></script>
-  <script src="website/libraries/p5.sound.min.js"></script>
+  <script src="website/libraries/p5.sound.min.js"></script> -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -74,6 +75,7 @@
     <div class='center'>
       <div id="sketch-container"></div>
 
+      <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
       <script src="website/sketch.js"></script>
       <script src="website/Country.js"></script>
       <script src="website/EmissionCircle.js"></script>
